Update hero section text and resume link

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
   <div class="hero" id="about">
     <div class="spider-web"></div>
-    <div class="hero-tag">System: Online</div>
+    <div class="hero-tag">Hey : It's Your</div>
     <h1>Friendly<br>Neighbourhood<br>Web Developer</h1>
     <p>I build digital experiences with great power and great responsibility. Full-Stack Engineering. Web Security. Chaotic Good.</p>
-    <a href="#" class="cta-btn" download>Download Resume</a>
+    <a href="Sadiq_CV.pdf" class="cta-btn" download>Download Resume</a>
   </div>
 
   <section id="projects">
