--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
   <footer id="contact">
     <h2>Let's Team Up</h2>
     <div class="footer-links">
-      <a href="#">Email</a>
+      <a href="Sadiqsiddiqui2k3@gmail.com">Email</a>
       <a href="https://www.linkedin.com/in/sadiq-siddiqui-3165b222a/">LinkedIn</a>
       <a href="https://github.com/Sadiq2k3">GitHub</a>
-      <a href="#">Phone</a>
+      <a href="+918700204081">Phone</a>
     </div>
   </footer>
 
